run scripts & update api (/v1/todo/all/ -> /v1/todo)
